AC_INIT([zmoddev], [2.0])

AC_CONFIG_AUX_DIR([config])
AC_CONFIG_SRCDIR([src/zentyal-moddev-create.in])

AM_INIT_AUTOMAKE([foreign])

AM_MAINTAINER_MODE

AC_DEFINE_DIR(DATADIR, datadir)
AC_DEFINE_DIR(LIBDIR, libdir)

AC_CONFIG_FILES([
Makefile
src/Makefile
src/zentyal-moddev-create
src/zentyal-moddev-model
src/zentyal-moddev-composite
src/zentyal-moddev-type
src/zentyal-moddev-stub
stubs/Makefile
])

AC_OUTPUT
