## Process this file with automake to produce Makefile.in

SUBDIRS = src schemas stubs

MAINTAINERCLEANFILES = aclocal.m4 configure Makefile.in config.status \
                       config.log config/mkinstalldirs depcomp \
                       config/install-sh config/missing  \
                       config/config.guess config/config.sub po/Makefile.am

EXTRA_DIST =
