## Process this file with automake to produce Makefile.in

Stubdir = @STUBSPATH@/asterisk

nobase_Stub_DATA = modules.conf.mas meetme.conf.mas extconfig.conf.mas sip.conf.mas \
                   extensions.conf.mas res_ldap.conf.mas rtp.conf.mas users.conf.mas \
                   voicemail.conf.mas features.conf.mas musiconhold.conf.mas

EXTRA_DIST = $(nobase_Stub_DATA)

MAINTAINERCLEANFILES = Makefile.in
